crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@variable-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/variable-binder.input
---
Input: f
Start { kind: VariableBinder }
  Start { kind: Name }
    Token { kind: Lower }
  Finish
Finish
