crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@wildcard.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/wildcard.input
---
Input: _ -> _

Start { kind: ArrowType }
  Start { kind: WildcardType }
    Token { kind: Underscore }
  Finish
  Token { kind: RightArrow }
  Start { kind: WildcardType }
    Token { kind: Underscore }
  Finish
Finish

