crates/parsing/src/grammar/snapshots/parsing__grammar__tests__false-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: false
Start { kind: LiteralBinder }
  Token { kind: LiteralFalse }
Finish
