crates/parsing/src/grammar/snapshots/parsing__grammar__tests__forall-plain.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: forall a. Type

Start { kind: ForallType }
  Token { kind: ForallKw }
  Start { kind: ForallVariables }
    Start { kind: TypeVariableName }
      Start { kind: Name }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
Finish
