crates/parsing/src/grammar/snapshots/parsing__grammar__tests__if-then-else.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: if f then g else h

Start { kind: IfThenElseExpression }
  Token { kind: IfKw }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Token { kind: ThenKw }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Token { kind: ElseKw }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
Finish
