crates/parsing/src/grammar/snapshots/parsing__grammar__tests__integer-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: 1
Start { kind: LiteralBinder }
  Token { kind: LiteralInteger }
Finish
